--- a/kubernetes/cluster/apps/smart-home/frigate/helm-release.yaml
+++ b/kubernetes/cluster/apps/smart-home/frigate/helm-release.yaml
@@ -28,7 +28,7 @@ spec:
           app:
             image:
               repository: ghcr.io/blakeblackshear/frigate
-              tag: 0.13.2
+              tag: 0.14.0-beta3
             resources:
               limits:
                 nvidia.com/gpu: 1
