Added Nvidia device plugin helm

--- a/kubernetes/cluster/flux-bootstrap/helm-repos/kustomization.yaml
+++ b/kubernetes/cluster/flux-bootstrap/helm-repos/kustomization.yaml
@@ -15,6 +15,7 @@ resources:
   - k8s-at-home.yaml
   - k8s-sigs.yaml
   - nextcloud-helm.yaml
+  - nvidia-device-plugin.yaml
   - sandermann.yaml
   - traefik.yaml
   - vmware-tanzu.yaml
