--- a/kubernetes/cluster/flux-bootstrap/helm-repos/nvidia-device-plugin.yaml
+++ b/kubernetes/cluster/flux-bootstrap/helm-repos/nvidia-device-plugin.yaml
@@ -6,5 +6,5 @@ metadata:
   namespace: flux-system
 spec:
   interval: 15m
-  url: https://nvidia.github.io/k8s-device-plugin
+  url: https://helm.ngc.nvidia.com/nvidia
   timeout: 3m
