--- a/kubernetes/cluster/flux-bootstrap/helm-repos/kustomization.yaml
+++ b/kubernetes/cluster/flux-bootstrap/helm-repos/kustomization.yaml
@@ -14,6 +14,7 @@ resources:
   - jetstack.yaml
   - k8s-at-home.yaml
   - k8s-sigs.yaml
+  - nfs-provisioner.yaml
   - nvidia-device-plugin.yaml
   - sandermann.yaml
   - traefik.yaml
