Fix for Fluxcd/helm-controller issue #293

--- a/kubernetes/cluster/apps/monitoring/loki/helm-release.yaml
+++ b/kubernetes/cluster/apps/monitoring/loki/helm-release.yaml
@@ -22,7 +22,7 @@ spec:
       auth_enabled: false
       schemaConfig:
         configs:
-          - from: 2020-01-01
+          - from: "2020-01-01"
             store: tsdb
             object_store: s3
             schema: v13
