--- a/kubernetes/cluster/apps/monitoring/grafana/kustomization.yaml
+++ b/kubernetes/cluster/apps/monitoring/grafana/kustomization.yaml
@@ -2,7 +2,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - namespace.yaml
-  - grafana
-  - kube-state-metrics
-  - loki
+  - helm-release.yaml
