--- a/kubernetes/cluster/apps/gpu-operator/helm-release.yaml
+++ b/kubernetes/cluster/apps/gpu-operator/helm-release.yaml
@@ -19,4 +19,8 @@ spec:
       interval: 5m
   values:
     driver:
-      enabled: false
+      enabled: true
+    nfd:
+      enabled: true
+    toolkit:
+      enabled: true
