--- a/kubernetes/cluster/apps/gpu-operator/helm-release.yaml
+++ b/kubernetes/cluster/apps/gpu-operator/helm-release.yaml
@@ -19,7 +19,7 @@ spec:
       interval: 5m
   values:
     driver:
-      enabled: true
+      enabled: false
     nfd:
       enabled: true
     toolkit:
