--- a/kubernetes/cluster/apps/smart-home/frigate/helm-release.yaml
+++ b/kubernetes/cluster/apps/smart-home/frigate/helm-release.yaml
@@ -17,11 +17,6 @@ spec:
         namespace: flux-system
       interval: 5m
   values:
-    defaultPodOptions:
-      tolerations:
-        - key: nvidia.com/gpu
-          operator: Exists
-          effect: NoSchedule
     controllers:
       app:
         containers:
@@ -29,11 +24,18 @@ spec:
             image:
               repository: ghcr.io/blakeblackshear/frigate
               tag: 0.15.0-beta1
-            resources:
-              limits:
-                nvidia.com/gpu: 1
             securityContext:
               privileged: true
+        pod:
+          affinity:
+            nodeAffinity:
+              requiredDuringSchedulingIgnoredDuringExecution:
+                nodeSelectorTerms:
+                  - matchExpressions:
+                      - key: kubernetes.io/hostname
+                        operator: In
+                        values:
+                          - worker04
     ingress:
       app:
         enabled: true
@@ -81,6 +83,12 @@ spec:
         hostPathType: Directory
         globalMounts:
           - path: /dev/bus/usb
+      gpu:
+        type: hostPath
+        hostPath: /dev/dri
+        hostPathType: Directory
+        globalMounts:
+          - path: /dev/dri
       shm:
         type: emptyDir
         medium: Memory
