--- a/kubernetes/cluster/apps/other-webapps/ollama/helm-release.yaml
+++ b/kubernetes/cluster/apps/other-webapps/ollama/helm-release.yaml
@@ -66,6 +66,19 @@ spec:
           http:
             port: 8080
     ingress:
+      api:
+        enabled: true
+        hosts:
+          - host: aiapi.local.tam.land
+            paths:
+              - path: /
+                pathType: Prefix
+                service:
+                  identifier: app
+        tls:
+          - secretName: local-tamland-tls
+            hosts:
+              - aiapi.local.tam.land
       webui:
         enabled: true
         hosts:
@@ -100,12 +113,3 @@ spec:
             webui:
               - path: /app/backend/data
                 readOnly: false
-      # gpu:
-      #   enabled: true
-      #   type: hostPath
-      #   hostPath: /dev/dri
-      #   advancedMounts:
-      #     app:
-      #       app:
-      #         - path: /dev/dri
-      #           readOnly: false
