--- a/kubernetes/cluster/apps/smart-home/hass/helm-release.yaml
+++ b/kubernetes/cluster/apps/smart-home/hass/helm-release.yaml
@@ -28,6 +28,7 @@ spec:
               tag: "2024.11"
             env:
               TZ: America/Toronto
+              PYTHONPATH: /config/deps
       postgres:
         enabled: true
         containers:
