--- a/kubernetes/cluster/apps/media/prowlarr/helm-release.yaml
+++ b/kubernetes/cluster/apps/media/prowlarr/helm-release.yaml
@@ -50,7 +50,7 @@ spec:
         containers:
           app:
             image:
-              repository: linuxserver/prowlarr
+              repository: lscr.io/linuxserver/prowlarr
               tag: 1.27.0
             env:
               PUID: 568
