--- a/kubernetes/cluster/apps/media/sonarr/helm-release.yaml
+++ b/kubernetes/cluster/apps/media/sonarr/helm-release.yaml
@@ -22,8 +22,8 @@ spec:
         containers:
           app:
             image:
-              repository: linuxserver/sonarr
-              tag: 4.0.9
+              repository: lscr.io/linuxserver/sonarr
+              tag: 4.0.11
             env:
               PUID: 568
               PGID: 568
