Added homerow ERPNext instance

--- a/kubernetes/cluster/flux-bootstrap/helm-repos/kustomization.yaml
+++ b/kubernetes/cluster/flux-bootstrap/helm-repos/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
   - blockchain-charts.yaml
   - external-secrets.yaml
   - factorio-helm.yaml
+  - frappe.yaml
   - grafana.yaml
   - hashicorp.yaml
   - jetstack.yaml
