Added prometheus-community helm repo

--- a/kubernetes/cluster/flux-bootstrap/helm-repos/kustomization.yaml
+++ b/kubernetes/cluster/flux-bootstrap/helm-repos/kustomization.yaml
@@ -17,5 +17,6 @@ resources:
   - k8s-sigs.yaml
   - nfs-provisioner.yaml
   - nvidia-device-plugin.yaml
+  - prometheus-community.yaml
   - sandermann.yaml
   - traefik.yaml
