--- a/kubernetes/cluster/apps/3d-printing/spoolman/kustomization.yaml
+++ b/kubernetes/cluster/apps/3d-printing/spoolman/kustomization.yaml
@@ -2,7 +2,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - namespace.yaml
-  - fluidd
-  - orcaslicer
-  - spoolman
+  - helm-release.yaml
