--- a/kubernetes/cluster/apps/admin/unifi/kustomization.yaml
+++ b/kubernetes/cluster/apps/admin/unifi/kustomization.yaml
@@ -2,4 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - init-mongo-cm.yaml
+  - unifi-configuration-secret.yaml
   - helm-release.yaml
