Added homerow cert

--- a/kubernetes/cluster/apps/admin/traefik/certs/kustomization.yaml
+++ b/kubernetes/cluster/apps/admin/traefik/certs/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 resources:
   - tamland.yaml
   - homelandfarm.yaml
+  - homerow.yaml
   - local-tamland.yaml
   - retrorepairwiki.yaml
   - local-homerow.yaml
