--- a/kubernetes/cluster/apps/secrets/cluster-secrets/kustomization.yaml
+++ b/kubernetes/cluster/apps/secrets/cluster-secrets/kustomization.yaml
@@ -4,3 +4,4 @@ kind: Kustomization
 resources:
   - tamland-tls-clustersecret.yaml
   - retrorepairwiki-clustersecret.yaml
+  - homerow-clustersecret.yaml
