--- a/kubernetes/cluster/flux-bootstrap/helm-repos/kustomization.yaml
+++ b/kubernetes/cluster/flux-bootstrap/helm-repos/kustomization.yaml
@@ -15,6 +15,7 @@ resources:
   - jetstack.yaml
   - k8s-at-home.yaml
   - k8s-sigs.yaml
+  - mss.yaml
   - nfs-provisioner.yaml
   - nvidia-device-plugin.yaml
   - prometheus-community.yaml
