--- a/kubernetes/cluster/apps/secrets/secret-sync/helm-release.yaml
+++ b/kubernetes/cluster/apps/secrets/secret-sync/helm-release.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -10,27 +9,16 @@ spec:
     force: true
   chart:
     spec:
-      chart: app-template
-      version: 1.5.1
+      chart: secret-sync
+      version: 0.1.1
       sourceRef:
         kind: HelmRepository
-        name: bjw-s
+        name: mss
         namespace: flux-system
       interval: 5m
   values:
-    serviceAccount:
-      create: true
-      name: secret-sync-app
     image:
-      repository: registry.local.tam.land/secret-sync/sync
-      tag: latest
-    env:
-      VAULT_ENABLED: true
-      VAULT_ADDRESS: http://hashicorp-vault.secrets.svc.cluster.local:8200
-      VAULT_ROLE: secret-sync-role
-    service:
-      main:
-        enabled: false
-    persistence:
-      config:
-        enabled: false
+      repository: ghcr.io/mulan-szechuan-sauce/sercet-sync
+      tag: 0.1.1
+    crds:
+      enabled: true
