Removed ClusterSecrets and moved SecretSync definitions to their certs

--- a/kubernetes/cluster/apps/admin/traefik/certs/homerow.yaml
+++ b/kubernetes/cluster/apps/admin/traefik/certs/homerow.yaml
@@ -29,3 +29,14 @@ metadata:
 spec:
   defaultCertificate:
     secretName: "homerow-tls"
+---
+apiVersion: homerow.ca/v1
+kind: SyncSecret
+metadata:
+  name: homerow-tls-secret
+spec:
+  secret:
+    name: homerow-tls
+    namespace: admin
+  destinationNamespaces:
+    - homerow
