--- a/kubernetes/cluster/apps/admin/traefik/certs/kustomization.yaml
+++ b/kubernetes/cluster/apps/admin/traefik/certs/kustomization.yaml
@@ -2,9 +2,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - tamland.yaml
   - homelandfarm.yaml
   - homerow.yaml
+  - local-homerow.yaml
   - local-tamland.yaml
   - retrorepairwiki.yaml
-  - local-homerow.yaml
+  - tamland.yaml
+  - topdecked.yaml
