--- a/kubernetes/cluster/flux-bootstrap/helm-repos/kustomization.yaml
+++ b/kubernetes/cluster/flux-bootstrap/helm-repos/kustomization.yaml
@@ -14,6 +14,7 @@ resources:
   - hashicorp.yaml
   - jetstack.yaml
   - k8s-at-home.yaml
+  - k8s-device-plugin.yaml
   - k8s-sigs.yaml
   - mss.yaml
   - nfs-provisioner.yaml
