--- a/kubernetes/cluster/apps/media/jellyfin/helm-release.yaml
+++ b/kubernetes/cluster/apps/media/jellyfin/helm-release.yaml
@@ -29,16 +29,13 @@ spec:
               NVIDIA_VISIBLE_DEVICES: all
               TZ: America/Toronto
         pod:
-          runtimeClassName: nvidia
           affinity:
             nodeAffinity:
               requiredDuringSchedulingIgnoredDuringExecution:
                 nodeSelectorTerms:
                   - matchExpressions:
-                      - key: kubernetes.io/hostname
-                        operator: In
-                        values:
-                          - worker04
+                    - key: extensions.talos.dev/nonfree-kmod-nvidia-production
+                      operator: Exists
     serviceAccount:
       create: true
       name: jellyfin-app
