--- a/kubernetes/cluster/apps/other-webapps/ollama/helm-release.yaml
+++ b/kubernetes/cluster/apps/other-webapps/ollama/helm-release.yaml
@@ -29,16 +29,13 @@ spec:
               NVIDIA_VISIBLE_DEVICES: all
               OLLAMA_KEEP_ALIVE: 24h
         pod:
-          runtimeClassName: nvidia
           affinity:
             nodeAffinity:
               requiredDuringSchedulingIgnoredDuringExecution:
                 nodeSelectorTerms:
                   - matchExpressions:
-                      - key: kubernetes.io/hostname
-                        operator: In
-                        values:
-                          - worker04
+                    - key: extensions.talos.dev/nonfree-kmod-nvidia-production
+                      operator: Exists
       webui:
         enabled: true
         containers:
