--- a/kubernetes/cluster/apps/smart-home/frigate/helm-release.yaml
+++ b/kubernetes/cluster/apps/smart-home/frigate/helm-release.yaml
@@ -29,16 +29,13 @@ spec:
             env:
               NVIDIA_VISIBLE_DEVICES: all
         pod:
-          runtimeClassName: nvidia
           affinity:
             nodeAffinity:
               requiredDuringSchedulingIgnoredDuringExecution:
                 nodeSelectorTerms:
                   - matchExpressions:
-                      - key: kubernetes.io/hostname
-                        operator: In
-                        values:
-                          - worker04
+                    - key: extensions.talos.dev/nonfree-kmod-nvidia-production
+                      operator: Exists
     ingress:
       app:
         enabled: true
