Added zabbix deployment

--- a/kubernetes/cluster/flux-bootstrap/helm-repos/kustomization.yaml
+++ b/kubernetes/cluster/flux-bootstrap/helm-repos/kustomization.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: kustomize.config.k8s.io/v1beta1
+apiVersion: kustomize.config.k8s.io/v1
 kind: Kustomization
 resources:
   - anthonytam.yaml
@@ -20,3 +20,4 @@ resources:
   - prometheus-community.yaml
   - sandermann.yaml
   - traefik.yaml
+  - zabbix-community.yaml
