--- a/kubernetes/cluster/apps/admin/registry/helm-release.yaml
+++ b/kubernetes/cluster/apps/admin/registry/helm-release.yaml
@@ -11,44 +11,50 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 1.5.1
+      version: 4.1.2
       sourceRef:
         kind: HelmRepository
         name: bjw-s
         namespace: flux-system
       interval: 5m
   values:
-    serviceAccount:
-      create: true
-      name: registry-app
-    image:
-      repository: registry
-      tag: 2
-    service:
-      main:
+    controllers:
+      app:
         enabled: true
+        containers:
+          app:
+            image:
+              repository: registry
+              tag: 3.0.0
+    service:
+      app:
+        enabled: true
+        controller: app
+        primary: true
         ports:
           http:
             port: 5000
     ingress:
-      main:
+      app:
         enabled: true
         hosts:
           - host: registry.local.tam.land
             paths:
               - path: /
                 pathType: Prefix
+                service:
+                  identifier: app
         tls:
           - secretName: local-tamland-tls
             hosts:
               - registry.local.tam.land
-        
     persistence:
       config:
         enabled: true
-        type: custom
-        mountPath: /var/lib/registry
-        volumeSpec:
-          nfs:
-            server: nfs.local.tam.land
-            path: /nfs-share/registry
+        type: nfs
+        server: nfs.local.tam.land
+        path: /nfs-share/admin/registry/data
+        advancedMounts:
+          app:
+            app:
+              - path: /var/lib/registry
