--- a/kubernetes/cluster/apps/media/calibre-web-automated-downloader/helm-release.yaml
+++ b/kubernetes/cluster/apps/media/calibre-web-automated-downloader/helm-release.yaml
@@ -10,7 +10,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 3.7.3
+      version: 4.1.2
       sourceRef:
         kind: HelmRepository
         name: bjw-s
@@ -23,7 +23,7 @@ spec:
           app:
             image:
               repository: ghcr.io/calibrain/calibre-web-automated-book-downloader
-              tag: "20250506"
+              tag: 20250615
             env:
               CLOUDFLARE_PROXY_BYPASS: http://localhost:8000
               UID: 33
