--- a/kubernetes/cluster/apps/media/calibre-web-automated-downloader/helm-release.yaml
+++ b/kubernetes/cluster/apps/media/calibre-web-automated-downloader/helm-release.yaml
@@ -23,7 +23,9 @@ spec:
           app:
             image:
               repository: ghcr.io/calibrain/calibre-web-automated-book-downloader
-              tag: 20250615
+              # Note to self, this is in quotes for a reason...
+              # couldn't parse image name "ghcr.io/calibrain/calibre-web-automated-book-downloader:2.0250615e+07"
+              tag: "20250615"
             env:
               CLOUDFLARE_PROXY_BYPASS: http://localhost:8000
               UID: 33
