--- a/kubernetes/cluster/apps/smart-home/frigate/kustomization.yaml
+++ b/kubernetes/cluster/apps/smart-home/frigate/kustomization.yaml
@@ -2,9 +2,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - namespace.yaml
-  - esphome
-  - frigate
-  - hass
-  - mosquitto
-  
+  - helm-release.yaml
