--- a/kubernetes/cluster/apps/other-webapps/ollama/helm-release.yaml
+++ b/kubernetes/cluster/apps/other-webapps/ollama/helm-release.yaml
@@ -44,7 +44,7 @@ spec:
               repository: ghcr.io/open-webui/open-webui
               tag: v0.6.15
             env:
-              OLLAMA_BASE_URLS: http://ollama.other-webapps.svc.cluster.local:11434
+              OLLAMA_BASE_URLS: http://ollama-app.other-webapps.svc.cluster.local:11434
     service:
       app:
         enabled: true
