--- a/kubernetes/cluster/apps/smart-home/wyoming/helm-release.yaml
+++ b/kubernetes/cluster/apps/smart-home/wyoming/helm-release.yaml
@@ -3,7 +3,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: wyoming
-  namespace: other-webapps
+  namespace: smart-home
 spec:
   interval: 5m
   upgrade:
