--- a/docker/containers/bitcoin-core/Dockerfile
+++ b/docker/containers/bitcoin-core/Dockerfile
@@ -4,7 +4,7 @@ FROM debian:bookworm-slim
 ARG VERSION
 WORKDIR /app
 RUN apt-get update \
- && apt-get install -y git build-essential libtool autotools-dev automake pkg-config bsdmainutils python3 libevent-dev libboost-dev \
+ && apt-get install -y git build-essential cmake pkgconf python3 libevent-dev libboost-dev libcapnp-dev capnproto libzmq3-dev systemtap-sdt-dev  \
  && chown 1000 /app
 
 RUN adduser --disabled-password --uid 1000 --home /app bitcoin
@@ -12,13 +12,12 @@ USER bitcoin
 
 RUN git clone https://github.com/bitcoin/bitcoin.git \
  && cd bitcoin \
- && ./autogen.sh \
- && ./configure --disable-wallet \
- && make -j $(nproc --all) 
+ && cmake -B build -DENABLE_WALLET=OFF \
+ && cmake --build build -j $(nproc --all)
 
 # RPC
 EXPOSE 8332
 # P2P
 EXPOSE 8333
 
-CMD ["/app/bitcoin/src/bitcoind"]
+CMD ["/app/bitcoin/bin/bitcoind"]
