--- a/docker/containers/bitcoin-core/Dockerfile
+++ b/docker/containers/bitcoin-core/Dockerfile
@@ -1,10 +1,10 @@
 ARG VERSION=27.1
 
-FROM debian:bookworm-slim
+FROM debian:trixie-slim
 ARG VERSION
 WORKDIR /app
-RUN apt-get update \
- && apt-get install -y git build-essential cmake pkgconf python3 libevent-dev libboost-dev libcapnp-dev capnproto libzmq3-dev systemtap-sdt-dev  \
+RUN apt update \
+ && apt install -y adduser git build-essential cmake pkgconf python3 libevent-dev libboost-dev libcapnp-dev capnproto libzmq3-dev systemtap-sdt-dev  \
  && chown 1000 /app
 
 RUN adduser --disabled-password --uid 1000 --home /app bitcoin
@@ -20,4 +20,4 @@ EXPOSE 8332
 # P2P
 EXPOSE 8333
 
-CMD ["/app/bitcoin/bin/bitcoind"]
+CMD ["/app/bitcoin/build/bin/bitcoind"]
