--- a/kubernetes/cluster/apps/admin/garage/kustomization.yaml
+++ b/kubernetes/cluster/apps/admin/garage/kustomization.yaml
@@ -2,10 +2,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - namespace.yaml
-  - garage
-  - mailrise
-  - registry
-  - traefik
-  - unifi
-
+  - helm-release.yaml
