--- a/kubernetes/cluster/flux-bootstrap/helm-repos/kustomization.yaml
+++ b/kubernetes/cluster/flux-bootstrap/helm-repos/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - appscode.yaml
   - bitnami.yaml
   - bjw-s.yaml
+  - cilium.yaml
   - external-secrets.yaml
   - factorio-helm.yaml
   - frappe.yaml
