--- a/kubernetes/cluster/apps/media/qbittorrent/helm-release.yaml
+++ b/kubernetes/cluster/apps/media/qbittorrent/helm-release.yaml
@@ -18,10 +18,12 @@ spec:
       interval: 5m
   values:
     defaultPodOptions:
-      dnsConfig:
-        options:
-          - name: ndots
-            value: "1"
+      labels:
+        egress-gw: vpn
+    #   dnsConfig:
+    #     options:
+    #       - name: ndots
+    #         value: "1"
     controllers:
       app:
         enabled: true
@@ -34,18 +36,6 @@ spec:
             securityContext:
               runAsUser: 0
               runAsGroup: 0
-          gluetun:
-            dependsOn: dnsdist
-            image:
-              repository: ghcr.io/qdm12/gluetun
-              tag: v3.40.0
-            envFrom:
-              - secret: qbittorrent-configuration
-            restartPolicy: Always
-            securityContext:
-              capabilities:
-                add:
-                  - NET_ADMIN
         containers:
           app:
             image:
@@ -54,27 +44,6 @@ spec:
             env:
               PUID: 568
               PGID: 568
-          port-forward:
-            image:
-              repository: ghcr.io/bjw-s-labs/gluetun-qb-port-sync
-              tag: 0.0.4
-            env:
-              GLUETUN_CONTROL_SERVER_HOST: localhost
-              GLUETUN_CONTROL_SERVER_PORT: 8000
-              QBITTORRENT_HOST: localhost
-              QBITTORRENT_WEBUI_PORT: 8080
-              CRON_ENABLED: true
-              CRON_SCHEDULE: "*/10 * * * *"
-              LOG_TIMESTAMP: false
-            securityContext:
-              runAsUser: 568
-              runAsGroup: 568
-              runAsNonRoot: true
-              allowPrivilegeEscalation: false
-              readOnlyRootFilesystem: true
-              capabilities:
-                drop:
-                  - ALL
     service:
       app:
         enabled: true
@@ -118,15 +87,6 @@ spec:
             app:
               - path: /media
                 readOnly: false
-      tun:
-        type: hostPath
-        hostPath: /dev/net
-        hostPathType: Directory
-        advancedMounts:
-          app:
-            gluetun:
-              - path: /dev/net/tun
-                subPath: tun
       dnsdist:
         enabled: true
         type: nfs
@@ -138,9 +98,3 @@ spec:
               - path: /etc/dnsdist/dnsdist.conf
                 subPath: dnsdist.conf
                 readOnly: true
-      port-forward-config:
-        type: emptyDir
-        advancedMounts:
-          app:
-            port-forward:
-              - path: /config
