--- a/kubernetes/cluster/apps/homerow/ecommerce-uat/kustomization.yaml
+++ b/kubernetes/cluster/apps/homerow/ecommerce-uat/kustomization.yaml
@@ -2,6 +2,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - namespace.yaml
-  - erpnext
-  - ecommerce-uat
+  - ecommerce-uat-secrets.yaml
+  - helm-release.yaml
