Moved erpnext from homerow. Removed homerow for tansfer to alternate repo

--- a/kubernetes/cluster/apps/erpnext/erpnext-values-secret.yaml
+++ b/kubernetes/cluster/apps/erpnext/erpnext-values-secret.yaml
@@ -3,7 +3,7 @@ apiVersion: 'kubernetes-client.io/v1'
 kind: ExternalSecret
 metadata:
   name: erpnext-values
-  namespace: homerow
+  namespace: erpnext
 spec:
   backendType: vault
   vaultMountPoint: kubernetes
