--- a/kubernetes/cluster/apps/erpnext/jobs/job-drop-site.yaml
+++ b/kubernetes/cluster/apps/erpnext/jobs/job-drop-site.yaml
@@ -4,7 +4,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: frappe-bench-erpnext-drop-site-20241222132320
-  namespace: homerow
+  namespace: erpnext
   labels:
     app.kubernetes.io/name: erpnext
     app.kubernetes.io/instance: frappe-bench
