--- a/kubernetes/cluster/apps/monitoring/grafana/helm-release.yaml
+++ b/kubernetes/cluster/apps/monitoring/grafana/helm-release.yaml
@@ -1,4 +1,3 @@
-# yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s/helm-charts/common-3.0.2/charts/library/common/values.schema.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -41,16 +40,16 @@ spec:
       app:
         enabled: true
         hosts:
-          - host: grafana.local.tam.land
+          - host: grafana.tam.land
             paths:
               - path: /
                 pathType: Prefix
                 service:
                   identifier: app
         tls:
-          - secretName: local-tamland-tls
+          - secretName: tamland-tls
             hosts:
-              - grafana.local.tam.land
+              - grafana.tam.land
     persistence:
       data:
         enabled: true
